# RL24_HW_1_lisi

./: README.md
Homework 2/ros2_kdl_package/include/: kdl_control.h  kdl_planner.h  kdl_robot.h  utils.h
Homework 2/ros2_kdl_package/src/: kdl_control.cpp  kdl_planner.cpp  kdl_robot.cpp  ros2_kdl_node.cpp
Homework_1_RL/arm_control/: CMakeLists.txt  package.xml
Homework_1_RL/arm_control/config/: arm_controller.yaml
Homework_1_RL/arm_control/launch/: control.launch.py
Homework_1_RL/arm_control/src/: pub_sub.cpp
Homework_1_RL/arm_control/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Homework_1_RL/arm_description/: CMakeLists.txt  package.xml
Homework_1_RL/arm_description/launch/: display.launch.py
Homework_1_RL/arm_description/rviz/: arm.rviz
Homework_1_RL/arm_description/urdf/: arm.urdf.xacro  arm_hardware_interface.xacro
Homework_1_RL/arm_gazebo/: CMakeLists.txt  package.xml
Homework_1_RL/arm_gazebo/launch/: arm_gazebo.launch.py  arm_world.launch.py
Homework_1_RL/arm_gazebo/urdf/: arm.urdf.xacro  arm_camera.xacro
