<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mario.selvaggio@unina.it">mrslvg</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_geometry_msg</depend>
  
  <depend>controller_manager</depend>
  <depend>forward_command_controller</depend>
  
  <depend>ros2_control</depend>
  <depend>gazebo_ros</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>urdf</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gaxebo_ros gazebo_model_path = "${prefix}/.."/>
  </export>
</package>
