<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_description</name>
  <version>0.0.0</version>
  <description>URDF and mesh files for the arm_description package</description>
  
  <maintainer email="mario.selvaggio@unina.it">mrslvg</maintainer>
  <license>Apache-2.0</license>

  <!-- Dipendenze per la compilazione del pacchetto -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dipendenze per la compilazione e l'esecuzione -->
  <depend>urdf</depend> <!-- Pacchetto necessario per lavorare con i file URDF -->
  <depend>xacro</depend> <!--  file .xacro  -->
  <depend>robot_state_publisher</depend> <!-- Pubblica le trasformazioni del robot -->
  <depend>joint_state_publisher</depend> <!-- Pubblica lo stato dei giunti del robot -->
  <depend>rviz2</depend> <!-- Per la visualizzazione in RViz -->
  <depend>geometry_msgs</depend> <!-- Dipendenza per i messaggi di geometria -->

  <!-- Dipendenze per i test -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
